crates/core/src/snapshots/ion_core__tests__unexpected_token_2.snap
---
source: crates/core/src/lib.rs
expression: "err.pretty_print(false, code, \"<code>\")"
---
error: Unexpected token, expected one of "fn", "global" or r#"[a-zA-Z_][\\w_]*"#
 --> <code>:1:1
  |
1 | "
  | ^
  |
4 |             "
  | ^^^^^^^^^^^^^

